@@ -1,3 +1,6 @@
+2006-12-09 Added support for plotting 2-D arrays with plot:
+           columns are plotted as in Matlab - EF
+
 2006-12-09 Added linewidth kwarg to bar and barh; fixed arg
            checking bugs - EF
 
